Closed
Bug 1796280
Opened 3 years ago
Closed 3 years ago
-Wunused-* warnings in NSS
Categories
(NSS :: Libraries, defect)
NSS
Libraries
Tracking
(Not tracked)
RESOLVED
FIXED
3.85
People
(Reporter: glandium, Assigned: glandium)
References
Details
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
Details |
[task 2022-10-19T08:35:39.156Z] 08:35:39 ERROR - /builds/worker/checkouts/gecko/security/nss/lib/ssl/sslsnce.c(253,18): error: unused function 'LaunchLockPoller' [-Werror,-Wunused-function]
[task 2022-10-19T08:35:39.157Z] 08:35:39 INFO - static SECStatus LaunchLockPoller(cacheDesc *cache);
[task 2022-10-19T08:35:39.157Z] 08:35:39 INFO - ^
[task 2022-10-19T08:35:39.157Z] 08:35:39 ERROR - /builds/worker/checkouts/gecko/security/nss/lib/ssl/sslsnce.c(254,18): error: unused function 'StopLockPoller' [-Werror,-Wunused-function]
[task 2022-10-19T08:35:39.158Z] 08:35:39 INFO - static SECStatus StopLockPoller(cacheDesc *cache);
[task 2022-10-19T08:35:39.158Z] 08:35:39 INFO - ^
[task 2022-10-19T08:35:39.158Z] 08:35:39 INFO - 2 errors generated.
[task 2022-10-19T08:38:08.624Z] 08:38:08 ERROR - /builds/worker/checkouts/gecko/security/nss/lib/jar/jarfile.c(758,26): error: unused variable 'attr' [-Werror,-Wunused-variable]
[task 2022-10-19T08:38:08.624Z] 08:38:08 INFO - unsigned int attr = 0;
[task 2022-10-19T08:38:08.624Z] 08:38:08 INFO - ^
[task 2022-10-19T08:38:08.624Z] 08:38:08 INFO - 1 error generated.
[task 2022-10-19T08:38:09.554Z] 08:38:09 ERROR - /builds/worker/checkouts/gecko/security/nss/cmd/certutil/keystuff.c(47,9): error: variable 'fd' set but not used [-Werror,-Wunused-but-set-variable]
[task 2022-10-19T08:38:09.554Z] 08:38:09 INFO - int fd;
[task 2022-10-19T08:38:09.554Z] 08:38:09 INFO - ^
[task 2022-10-19T08:38:09.725Z] 08:38:09 ERROR - /builds/worker/checkouts/gecko/security/nss/cmd/lib/secpwd.c(29,1): error: unused function 'echoOff' [-Werror,-Wunused-function]
[task 2022-10-19T08:38:09.725Z] 08:38:09 INFO - echoOff(int fd)
[task 2022-10-19T08:38:09.726Z] 08:38:09 INFO - ^
[task 2022-10-19T08:38:09.726Z] 08:38:09 ERROR - /builds/worker/checkouts/gecko/security/nss/cmd/lib/secpwd.c(42,1): error: unused function 'echoOn' [-Werror,-Wunused-function]
[task 2022-10-19T08:38:09.726Z] 08:38:09 INFO - echoOn(int fd)
[task 2022-10-19T08:38:09.726Z] 08:38:09 INFO - ^
[task 2022-10-19T08:38:09.726Z] 08:38:09 INFO - 2 errors generated.
| Assignee | ||
Comment 1•3 years ago
|
||
| Assignee | ||
Comment 2•3 years ago
|
||
I missed another on Windows aarch64:
[task 2022-10-19T08:57:30.070Z] 08:57:30 ERROR - /builds/worker/checkouts/gecko/security/nss/lib/freebl/blinit.c(146,24): error: unused variable 'getauxval' [-Werror,-Wunused-variable]
[task 2022-10-19T08:57:30.070Z] 08:57:30 INFO - static unsigned long (*getauxval)(unsigned long) = NULL;
[task 2022-10-19T08:57:30.070Z] 08:57:30 INFO - ^
[task 2022-10-19T08:57:30.070Z] 08:57:30 INFO - 1 error generated.
| Assignee | ||
Comment 3•3 years ago
|
||
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 3.85
You need to log in
before you can comment on or make changes to this bug.
Description
•