Bug 1796280 - Fix -Wunused-{function,variable,but-set-variable} warnings on Windows. r=nss-reviewers,jschanck

Differential Revision: https://phabricator.services.mozilla.com/D159771

--HG--
extra : moz-landing-system : lando